--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/assets/CSS/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel=" stylesheet" href="assets/CSS/styles.css">
   <title>Frontend Mentor | QR code component</title>
 
 </head>
@@ -15,7 +15,7 @@
     <section class="card__container center">
       <article class="card">
         <div class="card__figure">
-          <img class="card__img" src="/assets/images/image-qr-code.png" alt="qr code image">
+          <img class="card__img" src="assets/images/image-qr-code.png" alt="qr code image">
         </div>
         <div class="card__body">
           <h1 class="card__title">Improve your front-end skills by building projects</h1>
